--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>NgxPasswordValidator</title>
-  <base href="”https://jaganbishoyi.github.io/ngx-password-validator/”">
+  <base href="https://jaganbishoyi.github.io/ngx-password-validator/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.7e00847f3b21a245e68e.css"></head>
