--- a/index.html
+++ b/index.html
@@ -2,22 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ngx-password-validator | NPM</title>
+    <title>
+      ng-password-validator(v2.0.0): The password validator is a pop-up window
+      that appears when you start typing in input box. Here you can configure
+      the password acceptance criteria, once your enter characters fullfil the
+      requirement you will get a success message.
+    </title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
+  <link rel="stylesheet" href="styles.65f294701ccf72c281c1.css"></head>
   <body>
     <app-root></app-root>
-    <script src="runtime-es2015.js" type="module"></script>
-    <script src="runtime-es5.js" nomodule defer></script>
-    <script src="polyfills-es5.js" nomodule defer></script>
-    <script src="polyfills-es2015.js" type="module"></script>
-    <script src="styles-es2015.js" type="module"></script>
-    <script src="styles-es5.js" nomodule defer></script>
-    <script src="vendor-es2015.js" type="module"></script>
-    <script src="vendor-es5.js" nomodule defer></script>
-    <script src="main-es2015.js" type="module"></script>
-    <script src="main-es5.js" nomodule defer></script>
-  </body>
+  <script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.8dd0c8d9e32cebb3597c.js" type="module"></script><script src="main-es5.8dd0c8d9e32cebb3597c.js" nomodule defer></script></body>
 </html>
