--- a/demo-app/src/index.html
+++ b/demo-app/src/index.html
@@ -8,7 +8,7 @@
       the password acceptance criteria, once your enter characters fullfil the
       requirement you will get a success message.
     </title>
-    <base href="/" />
+    <base href="https://jaganbishoyi.github.io/ngx-password-validator/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
