Base URL updated

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       the password acceptance criteria, once your enter characters fullfil the
       requirement you will get a success message.
     </title>
-    <base href="https://jaganbishoyi.github.io/ngx-password-validator/">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <base href="https://jaganb.dev/ngx-password-validator/">    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="styles.65f294701ccf72c281c1.css"></head>
 
